[gd_scene load_steps=7 format=3 uid="uid://dl8m7cuio8sv0"]

[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="1_ivc7s"]
[ext_resource type="FontFile" uid="uid://chy56ut33g38" path="res://assets/font/AsianNinja-z874L.ttf" id="2_mraq4"]
[ext_resource type="Script" path="res://scripts/SaveData.gd" id="3_v2x6n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fdinn"]
content_margin_bottom = 20.0

[sub_resource type="LabelSettings" id="LabelSettings_tf1of"]
font = ExtResource("2_mraq4")
font_size = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8i50"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 0.0
bg_color = Color(0.34902, 0.34902, 0.34902, 0.709804)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("3_v2x6n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.304077
offset_bottom = 2.0
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopText" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mraq4")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_fdinn")
text = "Top Scores"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")
script = ExtResource("1_ivc7s")

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label7" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label8" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label9" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="Label10" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_tf1of")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mraq4")
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_p8i50")
text = "Menu"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Button" to="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Label" method="_on_button_pressed"]
